@@ -3,6 +3,7 @@
 
 - Fixed GUIWatcher::OnEvent() blocking event passback.
 - Added GUIWatcher::bringToFront() to allow inserting GUIWatcher between element and its parent.
+- Added IGUIElement parenting in gui_create().
 
 
 ====================
